# mcml

./: .gitignore  Cargo.toml  justfile
src/: assign_homes.rs  codegen.rs  datapack.rs  desugar_asserts.rs  emit_text.rs  insert_jmps.rs  lex.rs  lib.rs  linearize.rs  main.rs  parse.rs  reify_locations.rs  runtime.rs  select_commands.rs  select_instructions.rs  uniquify.rs  utility.rs  var.rs
src/assign_homes/: build_interference.rs  build_move.rs  color_graph.rs  uncover_live.rs
tests/: arithmetic.mcml  collatz.mcml  commands.mcml  cond.mcml  fail.mcml  integration_test.rs  literals.mcml  variables.mcml
