[package]
name = "mcml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
json = "0.12.4"
tap_parser = "0.1.1"
tempdir = "0.3.7"
zip = "0.6.6"
