[package]
name = "mcml"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.4.18", features = ["derive"] }
itertools = "0.12.0"
json = "0.12.4"
keyed_priority_queue = "0.4.2"
once_cell = "1.19.0"
parking_lot = "0.12.1"
petgraph = "0.6.4"
tap = "1.0.1"
tap_parser = "0.1.1"
tempdir = "0.3.7"
zip = "0.6.6"
